--- a/package.json
+++ b/package.json
@@ -37,5 +37,8 @@
 		"vite": "^4.0.0",
 		"vitest": "^0.25.3"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"ky": "^0.33.2"
+	}
 }
